--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ description: >-                        # used by seo meta and the atom feed
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://willy-jl.github.io'
 
+linktree:
+  username: WillyJL             # change to your linktree username
+
 github:
   username: Willy-JL             # change to your github username
 
