--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,11 @@
 
 -
   type: linktree
-  icon: 'fab fa-id-card'
+  icon: 'far fa-id-card'
+  url: ''
 -
   type: github
-  icon: 'fab fa-github'
--
-  type: twitter
-  icon: 'fab fa-twitter'
--
-  type: email
-  icon: 'fas fa-envelope'
-  noblank: true            # open link in current tab
+  icon: 'fab fa-github-alt'
 -
   type: rss
   icon: 'fas fa-rss'
