Finalize contact links

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,11 +2,15 @@
 
 -
   type: linktree
-  icon: 'far fa-id-card'
-  url: ''
+  icon: 'far fa-user'
+  url: 'https://linktr.ee/WillyJL'
 -
   type: github
   icon: 'fab fa-github-alt'
+-
+  type: email
+  icon: 'fas fa-envelope'
+  noblank: true            # open link in current tab
 -
   type: rss
   icon: 'fas fa-rss'
