--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ avatar: https://cdn.discordapp.com/avatars/285519042163245056/a_9594f0d3559cd3c3
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
-  shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: true  # boolean type, the global switch for posts comments.
+  shortname: 'willyjls-blog'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
